syntax = "proto3";

import "common.proto";
//import "transaction.proto";

package types;

message TokenOperPara {
    string from     = 1;
    string to       = 2;
    string execAddr = 3;
    int64 amount    = 4;
}

message OpResult {
    bool result = 1;
}

message RandomData {
    bytes random = 1;
}

message SetDBPara {
    bytes key   = 1;
    bytes value = 2;
}

message GetRequest {
    bytes  key   = 1;
    string contractAddr = 2;
}

message GetResponse {
    bytes value = 1;
}

message ValueSize {
    int32 size = 1;
}

service jvm {
    rpc ExecFrozen(TokenOperPara) returns (OpResult) {}
    rpc ExecActive(TokenOperPara) returns (OpResult) {}
    rpc ExecTransfer(TokenOperPara) returns (OpResult) {}
    rpc GetRandom(ReqNil) returns (RandomData) {}
    //state db 相关操作
    rpc SetStateDB(SetDBPara) returns (OpResult) {}
    rpc GetFromStateDB(GetRequest) returns (GetResponse) {}
    rpc GetValueSize(GetRequest) returns (ValueSize) {}
    //local db 相关操作
    rpc SetLocalDB(SetDBPara) returns (OpResult) {}
    rpc GetFromLocalDB(GetRequest) returns (GetResponse) {}
    rpc GetLocalValueSize(GetRequest) returns (ValueSize) {}
}

